# cua-lite.github.io

./: .gitignore  README.md  index.html  install.sh  pyproject.toml
assets/exps/: update_manifest.py
assets/exps/eval/: manifest.json
assets/exps/eval/androidlab/d6f368e4ff/: run_0.json
assets/exps/eval/androidworld/03fc490a07/: run_0.json
assets/exps/eval/browsergym.miniwob/f28f81402b/: run_0_default.json
assets/exps/eval/browsergym.miniwob/f57d3cbb92/: run_0.json
assets/exps/eval/browsergym.webarena/07f599ab7a/: run_0_default.json
assets/exps/eval/lite.osworld/0cde57702f/: run_0.json
assets/exps/eval/lite.osworld/4a6cb49b0d/: run_0.json
assets/exps/eval/lite.osworld/8ad4aaa03c/: run_0.json
assets/exps/eval/mobilegym/2a40f5258e/: run_0.json
assets/exps/eval/mobileworld/651af22040/: run_0.json
assets/exps/eval/osworld/651af22040/: run_0.json
assets/exps/eval/osworld/65ea6496ef/: run_0.json
assets/exps/eval/osworld_2/0cde57702f/: run_0.json
assets/exps/eval/osworld_g/d30ef912ca/: run_0.json
assets/exps/eval/screenspot_pro/5b887a39c1/: run_0.json
assets/exps/eval/webharbor.webvoyager/c1001a613c/: run_0_default.json  run_0_som.json
blog/: index.html
blog/kvm-free-osworld/: index.html
blog/kvm-free-osworld/benchmarking/: README.md  RESULTS.md  analyze_timing.py  footprint.json  measure_footprint.py  results.json
blog/why-cua-lite/: index.html
css/: style.css
js/: boot.js  desktop.js  lspop.js  main.js
scripts/: audit_site.py  make_apple_icon.py  make_demo_gif.py  make_og.py  serve.sh  shot.py  sync_assets.sh
(+28 files in other folders)
